# QmlOpenAuto

./: CMakeLists.txt  openautoconnector.cpp  openautoconnector.h
cmake_modules/: Findlibusb-1.0.cmake
test/: main.cpp  main.qml
